--- a/editorChords/Base.lproj/Main.storyboard
+++ b/editorChords/Base.lproj/Main.storyboard
@@ -1,24 +1,147 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="wNc-I3-7Xf">
+    <device id="retina6_1" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Table View Controller-->
+        <scene sceneID="tkV-gs-NNx">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                <tableViewController id="wNc-I3-7Xf" customClass="TableViewController" customModule="editorChords" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="CXz-P1-1LY">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="cell" id="wbr-fO-Qf3" customClass="TableViewCell" customModule="editorChords" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="414" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="wbr-fO-Qf3" id="71f-2V-BTl">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wny-U2-pE0">
+                                            <rect key="frame" x="20" y="9.5" width="42" height="25"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="40" id="RoF-t2-BkX"/>
+                                                <constraint firstAttribute="width" constant="42" id="sdd-3h-aNT"/>
+                                                <constraint firstAttribute="height" constant="25" id="yAl-A4-8mX"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <stackView opaque="NO" contentMode="scaleToFill" distribution="equalCentering" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="h62-cL-LDj">
+                                            <rect key="frame" x="70" y="0.0" width="240" height="43.5"/>
+                                            <subviews>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Cll-0I-zZa">
+                                                    <rect key="frame" x="0.0" y="2" width="40" height="40"/>
+                                                    <color key="backgroundColor" red="0.38222469889999999" green="1" blue="0.33841577839999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="40" id="9qJ-CE-eb8"/>
+                                                        <constraint firstAttribute="height" constant="40" id="UDc-Jf-ldb"/>
+                                                    </constraints>
+                                                    <state key="normal" title="6"/>
+                                                    <connections>
+                                                        <action selector="SixStringAction:" destination="wbr-fO-Qf3" eventType="touchUpInside" id="ppQ-3f-bkR"/>
+                                                    </connections>
+                                                </button>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Bom-et-8bj">
+                                                    <rect key="frame" x="40" y="2" width="40" height="40"/>
+                                                    <color key="backgroundColor" red="1" green="0.82901412949999997" blue="0.1986358054" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="40" id="mYt-b9-CkF"/>
+                                                        <constraint firstAttribute="height" constant="40" id="xxt-Kd-1Il"/>
+                                                    </constraints>
+                                                    <state key="normal" title="5"/>
+                                                    <connections>
+                                                        <action selector="FiveStringAction:" destination="wbr-fO-Qf3" eventType="touchUpInside" id="cfo-tb-KPN"/>
+                                                    </connections>
+                                                </button>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BRN-DM-GMx">
+                                                    <rect key="frame" x="80" y="2" width="40" height="40"/>
+                                                    <color key="backgroundColor" red="0.87563451780000001" green="0.1309868776" blue="0.0075652926780000003" alpha="0.52054794520000003" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="40" id="6ak-0t-X3B"/>
+                                                        <constraint firstAttribute="width" constant="40" id="fY8-Km-Ira"/>
+                                                    </constraints>
+                                                    <state key="normal" title="4"/>
+                                                    <connections>
+                                                        <action selector="FourStringAction:" destination="wbr-fO-Qf3" eventType="touchUpInside" id="qcY-fP-6VI"/>
+                                                    </connections>
+                                                </button>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2dT-tb-N2q">
+                                                    <rect key="frame" x="120" y="2" width="40" height="40"/>
+                                                    <color key="backgroundColor" red="0.54157727960000002" green="0.1643867195" blue="0.059696473180000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="40" id="6xE-oF-EJL"/>
+                                                        <constraint firstAttribute="height" constant="40" id="s2Q-Ex-VQy"/>
+                                                    </constraints>
+                                                    <state key="normal" title="3"/>
+                                                    <connections>
+                                                        <action selector="ThreStringAction:" destination="wbr-fO-Qf3" eventType="touchUpInside" id="8t1-Qa-UHG"/>
+                                                    </connections>
+                                                </button>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DxI-Ga-QNJ">
+                                                    <rect key="frame" x="160" y="2" width="40" height="40"/>
+                                                    <color key="backgroundColor" red="1" green="0.82901412949999997" blue="0.1986358054" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="40" id="Eaz-RW-03b"/>
+                                                        <constraint firstAttribute="width" constant="40" id="bta-P9-5mu"/>
+                                                    </constraints>
+                                                    <state key="normal" title="2"/>
+                                                    <connections>
+                                                        <action selector="TwoStringAction:" destination="wbr-fO-Qf3" eventType="touchUpInside" id="OO7-y0-bz6"/>
+                                                    </connections>
+                                                </button>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jyS-NL-qJl">
+                                                    <rect key="frame" x="200" y="2" width="40" height="40"/>
+                                                    <color key="backgroundColor" red="0.38222469889999999" green="1" blue="0.33841577839999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="40" id="Y4G-Uh-VWF"/>
+                                                        <constraint firstAttribute="width" constant="40" id="pde-PB-0kA"/>
+                                                    </constraints>
+                                                    <state key="normal" title="1"/>
+                                                    <connections>
+                                                        <action selector="OneStringAction:" destination="wbr-fO-Qf3" eventType="touchUpInside" id="2c6-Yx-uqb"/>
+                                                    </connections>
+                                                </button>
+                                            </subviews>
+                                        </stackView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="bottom" secondItem="h62-cL-LDj" secondAttribute="bottom" id="35a-Tf-WLi"/>
+                                        <constraint firstItem="h62-cL-LDj" firstAttribute="top" secondItem="71f-2V-BTl" secondAttribute="top" id="CdY-6p-9b0"/>
+                                        <constraint firstItem="h62-cL-LDj" firstAttribute="leading" secondItem="Wny-U2-pE0" secondAttribute="trailing" constant="8" symbolic="YES" id="QSH-eo-N3o"/>
+                                        <constraint firstItem="Wny-U2-pE0" firstAttribute="centerY" secondItem="71f-2V-BTl" secondAttribute="centerY" id="UUb-oL-wkL"/>
+                                        <constraint firstItem="Wny-U2-pE0" firstAttribute="leading" secondItem="71f-2V-BTl" secondAttribute="leadingMargin" id="wUp-Dv-DPt"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="fiveString" destination="Bom-et-8bj" id="0Ul-CZ-L30"/>
+                                    <outlet property="fourString" destination="BRN-DM-GMx" id="rxt-5M-iFa"/>
+                                    <outlet property="numberLad" destination="Wny-U2-pE0" id="M2q-gw-9ec"/>
+                                    <outlet property="oneString" destination="jyS-NL-qJl" id="Imf-Qc-2fs"/>
+                                    <outlet property="sixString" destination="Cll-0I-zZa" id="LdZ-dr-vZt"/>
+                                    <outlet property="threeString" destination="2dT-tb-N2q" id="pcq-ty-cd4"/>
+                                    <outlet property="twoString" destination="DxI-Ga-QNJ" id="8OU-fX-K9A"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="wNc-I3-7Xf" id="YbD-sz-Tcq"/>
+                            <outlet property="delegate" destination="wNc-I3-7Xf" id="fgd-kp-m0J"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="yyV-aX-x78" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="843.47826086956525" y="120.53571428571428"/>
         </scene>
     </scenes>
 </document>
