--- a/editorChords/Base.lproj/Main.storyboard
+++ b/editorChords/Base.lproj/Main.storyboard
@@ -30,7 +30,7 @@
                                                 <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="20" id="RoF-t2-BkX"/>
                                                 <constraint firstAttribute="height" constant="25" id="yAl-A4-8mX"/>
                                             </constraints>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
